# task-orchestrator-py

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MEMORY.md  PRD.md  README.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  stale.yml
docs/: ARCHITECTURE.md  GOAL-WEB-UI-ARCS.md  WEB-UI.md  WORKSPACE-GUIDE.md
docs/specs/: SPEC-F015-kanban-web-ui.md  SPEC-F016-timeline-view.md  SPEC-F017-auto-archive.md
src/task_orchestrator/: __init__.py  checkpoints.py  db.py  engine.py  prompts.py  schemas.py  server.py  workspace.py
src/task_orchestrator/ui/: __init__.py  app.py
src/task_orchestrator/ui/templates/: arc_detail.html  arcs.html  base.html  board.html  timeline.html
src/task_orchestrator/ui/templates/partials/: card.html  column.html  item_detail.html  tree_node.html
tests/: conftest.py  test_archive.py  test_engine.py  test_execution_stack.py  test_graph_metrics.py  test_resilience.py  test_ui_swimlanes.py  test_workspace.py  test_workspace_context.py
