[project]
name = "task-orchestrator-py"
version = "0.1.0"
description = "Python port of jpicklyk/task-orchestrator — MCP server for AI agent work management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Claudio Ferreira Filho"}]
keywords = ["mcp", "task-management", "ai-agents", "workflow"]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
task-orchestrator-py = "task_orchestrator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_orchestrator"]
