[project]
name = "task-orchestrator-py"
version = "1.1.0"
description = "Python port of jpicklyk/task-orchestrator — MCP server for AI agent work management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Claudio Ferreira Filho"}]
keywords = ["mcp", "task-management", "ai-agents", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "croniter>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/filhocf/task-orchestrator-py"
Repository = "https://github.com/filhocf/task-orchestrator-py"

[project.scripts]
task-orchestrator-py = "task_orchestrator.server:main"
task-orchestrator-ui = "task_orchestrator.ui.app:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_orchestrator"]
